apps/live/uptime-kuma/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: harrytang-prod
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: uptime-kuma
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      namespace: harrytang-prod
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: kuma
          image: louislam/uptime-kuma:2.0.0-beta-slim-rootless.2 # {"$imagepolicy": "harrytang-prod:uptime-kuma"}
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
