apps/live/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-srv
  namespace: harrytang-prod
spec:
  selector:
    app: uptime-kuma
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
